## Refactor: - **Major** Cambio de CommonJS en main.js a ECMAScript Modules main.mjs y en package.json el uso de 'type': 'module' | Funcionando - **preload.js sigue siendo un modulo CommonJS por temas de Compatibilidad por electron** - Estilos unicos de la Pagina 'index.html (ahorros)' - Estilos Globales para todas las paginas ## Feature: - Marcado de la Pagina Facturas y Arriendo - Estilos en la Pagina Facturas

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mi_primer_electron",
   "version": "1.0.0",
   "description": "Mi primera aplicación usando Electron.js",
-  "main": "main.js",
+  "main": "main.mjs",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
